# django-todo-app

./: manage.py  pyproject.toml
static/css/: styles.css
tasks/: models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
tasks/templates/tasks/: task_list.html
templates/: base.html  navbar.html
todoapp/: asgi.py  base_model.py  settings.py  urls.py  wsgi.py
users/: forms.py  urls.py  views.py
users/templates/users/: login.html  profile.html  registration.html
